# esp32_chat_server

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  run.bat  sdkconfig  sdkconfig.old
components/helpers/: CMakeLists.txt  Ouput.hpp  output.hpp
components/storage/: CMakeLists.txt  nvs_operation_handle.hpp  nvs_storage.hpp
components/storage/data_defintion/: nvs_data.hpp
components/wifi/: CMakeLists.txt  wifi.hpp
main/: AppConfiguration.hpp  CMakeLists.txt  SystemRun.cpp  SystemRun.hpp  app_configuration.hpp  main.cpp  system_run.cpp  system_run.hpp
main/cmd/: cmd.cpp  cmd.hpp
main/comm/: terminal_input.cpp  terminal_input.hpp  terminal_values.hpp
main/conf/: app_conf.hpp  storage_conf.hpp
main/events/: custom_event.cpp  custom_event.hpp  default_event.hpp
main/events/data_definition/: event_data.hpp
main/helpers/: output.hpp
main/peripherals/uart/: uart.hpp
main/peripherals/uart/data_definition/: uart_data.hpp
main/storage/: nvs_operation_handle.cpp  nvs_operation_handle.hpp  nvs_storage.hpp  nvs_values.hpp  spiffs_operation_handle.cpp  spiffs_operation_handle.hpp  spiffs_storage.cpp  spiffs_storage.hpp
main/storage/data_definition/: nvs_data.hpp
main/storage/data_defintion/: nvs_data.hpp
main/threading/: lock_mechanism.hpp  storage_locker.hpp  thread.cpp  thread.hpp  thread_support.hpp  thread_values.hpp
main/threading/data_definition/: thread_data.hpp
main/threading/locking/: lock_mechanism.hpp  storage_locker.hpp
main/wifi/: wifi.cpp  wifi.hpp  wifi_values.hpp
main/wifi/data_definition/: wifi_data.hpp
